<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#69b4ff"
    android:layout_marginHorizontal="10dp"
    tools:context=".activity.UpdateProfileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="Update Profile"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/etUFullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="Full Name"
        />


    <EditText
        android:id="@+id/etPhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="Phone Number"
        />



    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorAccent"

        />

</LinearLayout>